@@ -23,7 +23,7 @@ lib = lib
 # Properties for building the API
 #
 api-build = ${build}/jsnpp
-api-jar = jsnpp.jar
+api-jar = jsnpp-${version}.jar
 api-src = src
 
 #
